# vgram

./: CMakeLists.txt  DictExpansion.cpp  DictExpansion.h  DictionaryBase.cpp  DictionaryBase.h  DictionaryWithStat.cpp  DictionaryWithStat.h  IDictionary.h  Jamfile  LICENSE  ListDictionary.cpp  ListDictionary.h  ListDictionaryTest.cpp  ListDictionaryTest.h  MANIFEST.in  README.md  googletest.cmake  library.cpp  library.h  pybind11.cmake  setup.py  test.py
binding/: CMakeLists.txt  pybind11-download.cmake  pybind11.cmake
binding/src/main/: CMakeLists.txt  pybind11-download.cmake
binding/src/main/cpp/: base_tokenizer.cc  base_tokenizer.h  bind_all.cc  bind_tokenizers.cc  bind_vgram.cc  bind_vgram_builders.cc  char_tokenizer.h  main.cc  py_int_vgram_builder.h  py_stream_vgram_builder.cc  py_stream_vgram_builder.h  py_tokenizers.h  py_vgram_builder.cc  py_vgram_builder.h  seq_coder.cc  seq_coder.h  simple_tokenizer.h  test.cc  tokenizer.cc  tokenizer.h
binding/src/main/cpp/coders/: seq_coder.cc  seq_coder.h
binding/src/main/cpp/tokenizers/: base_tokenizer.cc  base_tokenizer.h  char_tokenizer.cc  char_tokenizer.h
binding/src/main/cpp/vgram_builders/: py_int_stream_vgram_builder.cc  py_int_stream_vgram_builder.h  py_int_vgram_builder.cc  py_int_vgram_builder.h  py_stream_vgram_builder.cc  py_stream_vgram_builder.cс  py_stream_vgram_builder.h  py_vgram_builder.cc  py_vgram_builder.h
binding/src/main/python/: synthetic_tests.py
binding/src/main/python/examples/: data_reader.py  int_vgram_examples.py  vgram_examples.py
binding/src/test/python/: lib_usage.py  test.py  tokenizer_test.py
core/: CMakeLists.txt
core/src/main/: CMakeLists.txt
core/src/main/cpp/: fast_random.cc  fast_random.h  int_dict.cc  int_dict.h  int_dict_p.cc  int_dict_p.h  int_vgram_builder.cc  int_vgram_builder.h  int_vgram_builder_p.cc  int_vgram_builder_p.h  library.cc  list_dict.cc  list_dict.h  seq_coder.cc  seq_coder.h  stat_dict.cc  stat_dict.h  stat_dict_p.cc  stat_dict_p.h
core/src/main/cpp/algorithm/: CMakeLists.txt  fast_random.cc  int_dict_p.cc  int_vgram_builder.h  int_vgram_builder_p.cc  int_vgram_builder_p.h  list_dict.h  stat_dict_p.cc  stat_dict_p.h  vector_hash.h  vgram_builder.cc
core/src/main/cpp/interfaces/: CMakeLists.txt  loader.h  saver.h  seq_coder.cc  seq_coder.h
core/src/main/cpp/interfaces/tokenizers/: base_tokenizer.cc  base_tokenizer.h  char_tokenizer.cc  char_tokenizer.h  word_tokenizer.cc  word_tokenizer.h
core/src/main/cpp/interfaces/vgram_builders/: int_stream_vgram.cc  int_stream_vgram.h  int_vgram.cc  int_vgram.h  string_stream_vgram.cc  string_stream_vgram.h  string_vgram.cc  string_vgram.h
core/src/test/: CMakeLists.txt
core/src/test/cpp/: CMakeLists.txt  ListDictionaryTest.cpp  googletest-download.cmake  int_dict_test.cc  int_vgram_builder_test.cpp  stat_dict_test.cc
core/src/test/cpp/algorithm/: common.cc  int_dict_test.cc  int_vgram_builder_test.cpp  stat_dict_test.cc
docs/: Makefile  make.bat
docs/source/: about.rst  builder.rst  conf.py  examples.rst  index.rst  save.rst  stream_builder.rst  tokenizers.rst  vgram_builder.rst
src/: CMakeLists.txt
src/main/: CMakeLists.txt
src/main/cpp/: DictExpansion.cpp  DictionaryBase.cpp  DictionaryWithStat.h  char_tokenizer.cc  fast_random.cc  fast_random.h  int_dict.cc  int_dict.cpp  int_dict.h  int_dict_p.cc  int_dict_p.cpp  int_dict_p.h  int_dictionary.cpp  int_dictionary.h  int_dictionary_p.h  int_list_p.cpp  int_vgram_builder.h  int_vgram_builder_p.cc  int_vgram_builder_p.cpp  int_vgram_builder_p.h  list_dict.cc  list_dict.h  list_dictionary.h  main.cc  py_vgram_builder.cc  py_vgram_builder.h  seq_coder.cc  stat_dict.cc  stat_dict.cpp  stat_dict.h  stat_dict_p.cc  stat_dict_p.h  vector_hash.h  vgram_builder.cc  vgram_builder.h
src/main/cpp/old/: DictionaryBase.h  DictionaryWithStat.cpp  ListDictionary.cpp  ListDictionary.h
src/test/: CMakeLists.txt  googletest.cmake
src/test/cpp/: ListDictionaryTest.cpp  common.cc  common.h  int_dict_p_test.cc  int_dict_test.cc  int_vgram_builder_p_test.cpp  int_vgram_builder_test.cpp  stat_dict_test.cc
